sandbox/output
ProfitIsolation.java:13: error: cannot find symbol
        final Double costs = timed(
                             ^
  symbol:   method timed(String,ProfitIsol[...]Costs)
  location: class ProfitIsolation
ProfitIsolation.java:17: error: cannot find symbol
        final Double revenue = timed(
                               ^
  symbol:   method timed(String,ProfitIsol[...]venue)
  location: class ProfitIsolation
ProfitIsolation.java:23: error: non-static variable logger cannot be referenced from a static context
                logger::info,
                ^
ProfitTest.java:28: error: method calculate in class ProfitIsolation cannot be applied to given types;
        assertEquals(18845.9, ProfitIsolation.calculate(), 0.001);
                                             ^
  required: String[]
  found: no arguments
  reason: actual and formal argument lists differ in length
4 errors
